--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -86,32 +86,31 @@ jobs:
         with:
           name: python-whl
           path: build/python/dist/*.whl
-
-#  c++_ut:
-#    needs: [build]
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.CR_PAT_ZW }}
-#    steps:
-#      - uses: actions/checkout@v1
-#      - name: update nss
-#        run: yum update -y nss curl libcurl
-#      - name: update submodule
-#        run: |
-#          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
-#          git submodule init
-#          git submodule update
-#      - name: build fedb
-#        run: |
-#          ln -sf /depends/thirdparty thirdparty
-#          ln -sf /depends/thirdsrc thirdsrc
-#          source /root/.bashrc && bash steps/simple_compile.sh
-#          source /root/.bashrc && sh tools/install_fesql.sh
-#          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j$(nproc) && cd ../
-#          source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
+  c++_ut:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+      - name: build fedb
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc && bash steps/simple_compile.sh
+          source /root/.bashrc && sh tools/install_fesql.sh
+          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j$(nproc) && cd ../
+          source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
 
 
 
