--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -78,7 +78,7 @@ jobs:
         with:
           name: python-whl
           path: build/python/dist/
-  c++_ut:
+  cpp_ut:
     needs: [build]
     runs-on: ubuntu-latest
     container:
@@ -105,7 +105,7 @@ jobs:
           source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
       - uses: actions/upload-artifact@v1
         with:
-          name: c++_ut-report
+          name: cpp_ut-report
           path: reports/
   fesql_auto_test_level_0:
     needs: [build]
