--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Build
       run: |
+        yum install python27
         ./tools/compile_and_test.sh
 
     - name: benchmark
