--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,13 +2,14 @@ name: FEDB-CICD
 on: [push, pull_request]
 env:
   GIT_SUBMODULE_STRATEGY: recursive
+  USER_NAME: wuyou10206
 jobs:
   style_check:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
       credentials:
-        username: ${{ github.actor }}
+        username: $USER_NAME
         password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
@@ -30,7 +31,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
       credentials:
-        username: ${{ github.actor }}
+        username: $USER_NAME
         password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
@@ -60,7 +61,7 @@ jobs:
           path: build/bin/fedb
       - uses: actions/upload-artifact@v1
         with:
-          name: \sql_sdk_test
+          name: sql_sdk_test
           path: build/bin/sql_sdk_test
       - uses: actions/upload-artifact@v1
         with:
@@ -78,3 +79,37 @@ jobs:
         with:
           name: python-whl
           path: build/python/dist/
+
+  fesql_auto_test_level_0:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mount -t tmpfs -o size=3G tmpfs /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: fedb
+          path: build/bin    
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          bash steps/fesql_auto_test.sh "0"
