--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -101,15 +101,234 @@ jobs:
       - name: set_up
         run: |
           mkdir /rambuild
-          mount -t tmpfs -o size=3G tmpfs /rambuild
           mkdir -p build/bin
       - uses: actions/download-artifact@v1
         with:
           name: fedb
-          path: build/bin    
+          path: build/bin
       - name: run case
         run: |
           ln -sf /depends/thirdparty thirdparty
           ln -sf /depends/thirdsrc thirdsrc
           source /root/.bashrc
           bash steps/fesql_auto_test.sh "0"
+
+  cpp_ut:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+      - name: exec-ut
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc && bash steps/simple_compile.sh
+          source /root/.bashrc && sh tools/install_fesql.sh
+          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j$(nproc) && cd ../
+          source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
+      - uses: actions/upload-artifact@v1
+        with:
+          name: cpp_ut-report
+          path: reports/
+
+  fesql_auto_test_level_cluster_0:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: fedb
+          path: build/bin
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          bash steps/fesql_auto_test_cluster.sh "0"
+      - uses: actions/upload-artifact@v1
+        with:
+          name: fesql_auto_test_level_cluster_0-report
+          path: reports/
+
+
+  fesql_sdk_c++_sql_sdk_test_level_0:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: sql_sdk_test
+          path: build/bin
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          bash steps/fesql_c_ut.sh 0 sql_sdk_test
+      - uses: actions/upload-artifact@v1
+        with:
+          name: fesql_sdk_c++_sql_sdk_test_level_0-report
+          path: reports/
+
+  fesql_test_python:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: fedb
+          path: build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: python-whl
+          path:  build/python/dist
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          bash steps/fesql_test_python.sh
+      - uses: actions/upload-artifact@v1
+        with:
+          name: fesql_test_python-report
+          path: src/sdk/python/sqlalchemy-test/
+
+  tablet_multi_demension:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: fedb
+          path: build/bin
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          sh steps/integration_test_on_ramdir.sh 1 "test" "ns_client"
+      - uses: actions/upload-artifact@v1
+        with:
+          name: tablet_multi_demension-report
+          path: /rambuild/fedb/test-output/integrationtest/test-reports
+
+  ns_multi_demension:
+    needs: [build]
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: $USER_NAME
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+
+      - name: set_up
+        run: |
+          mkdir /rambuild
+          mkdir -p build/bin
+      - uses: actions/download-artifact@v1
+        with:
+          name: fedb
+          path: build/bin
+      - name: run case
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc
+          sh steps/integration_test_on_ramdir.sh 1 "ns_client" "disk"
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ns_multi_demension-report
+          path: /rambuild/fedb/test-output/integrationtest/test-reports
