--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-java/hybridse-spark/src/main/scala/com/_4paradigm/hybridse/spark/nodes/LastJoinPlan.scala
 build
 build_mac
 thirdparty
@@ -21,6 +20,8 @@ src/fe_version.h
 java/*/target
 
 # ignore codegen files
+java/fesql-proto/src/main/java/com/*
+java/fesql-native/src/main/java/com/*
 java/hybridse-proto/src/main/java/com/*
 java/hybridse-native/src/main/java/com/*
 
