--- a/java/hybridse-common/pom.xml
+++ b/java/hybridse-common/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<artifactId>hybridse-sdk</artifactId>
 		<groupId>com._4paradigm.hybridse</groupId>
-        <version>0.0.4-RELEASE</version>
+        <version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hybridse-common</artifactId>
 	<packaging>jar</packaging>
 	<name>hybridse-common</name>
-	<version>0.0.4-RELEASE</version>
+	<version>0.1.0-SNAPSHOT</version>
 
     <dependencies>
 		<dependency>
