--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<artifactId>hybridse-sdk</artifactId>
 		<groupId>com._4paradigm.hybridse</groupId>
-        <version>0.0.4-RELEASE</version>
+        <version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hybridse-native</artifactId>
 	<packaging>jar</packaging>
 	<name>hybridse-native</name>
-	<version>0.0.4-RELEASE</version>
+	<version>0.1.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com._4paradigm.hybridse</groupId>
 			<artifactId>hybridse-proto</artifactId>
-			<version>0.0.4-RELEASE</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
