cicd tools script fix

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ tools/documentation/udf_doxygen/html
 tools/documentation/udf_doxygen/udfs
 style.xml
 hybridse_version.h
+intermediate_cicd_artifact_.tar.gz
