HybridSELibrary bug fix by use "hybridse_jsdk_core" as dylib name

--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com._4paradigm.hybridse</groupId>
 			<artifactId>hybridse-proto</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
