--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ tools/documentation/udf_doxygen/udfs
 style.xml
 hybridse_version.h
 intermediate_cicd_artifact_.tar.gz
+java/hybridse-spark/src/test/resources/fesql_windows
