--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -16,6 +16,7 @@
     <name>sdk</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <hybridse.version>0.0.1-SNAPSHOT</hybridse.version>
     </properties>
     <build>
         <pluginManagement>
