--- a/src/sdk/java/sql-jmh/pom.xml
+++ b/src/sdk/java/sql-jmh/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<fesql.version>0.0.3-RELEASE</fesql.version>
 	</properties>
 
 	<repositories>
@@ -92,9 +91,9 @@
 			<version>2.1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com._4paradigm.fesql</groupId>
-			<artifactId>fesql-common</artifactId>
-			<version>${fesql.version}</version>
+			<groupId>com._4paradigm.hybridse</groupId>
+			<artifactId>hybridse-common</artifactId>
+			<version>${hybridse.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
