--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<artifactId>hybridse-sdk</artifactId>
+		<artifactId>hybridse-java</artifactId>
 		<groupId>com._4paradigm.hybridse</groupId>
         <version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
