using init_env_profile.sh

--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: lint
       run: |
-        # requires python3, marked temporary
+        # requires python27 or later, marked temporary
         # ./tools/style_check.sh
 
     - name: Build
