--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -57,9 +57,10 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: mon
-          path: build/bin
+          #path: build/bin
       - name: run case
         run: |
+          ls -R
           ln -sf /depends/thirdparty thirdparty
           ln -sf /depends/thirdsrc thirdsrc
           source /root/.bashrc
