--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ coverage_report:
 build_hybridse_on_linux:
     stage: build
     script:
-        - bash tools/compile_and_test.sh
+        - bash tools/compile_and_test_all.sh
         - bash tools/cicd/gen_intermediate_cicd_artifacts.sh linux
         - bash tools/documentation/export_udf_doc.sh
     artifacts:
