--- a/examples/toydb/src/sdk/CMakeLists.txt
+++ b/examples/toydb/src/sdk/CMakeLists.txt
@@ -37,7 +37,7 @@ add_library(toydb_sdk STATIC ${SDK_SRC_FILE_LIST})
 target_link_libraries(toydb_sdk ${SDK_DEPS_LIBS})
 
 # toydb sdk testcases
-if (TESTING_ENABLE)
+if (TESTING_ENABLE AND EXAMPLES_TESTING_ENABLE)
 	set(TEST_CPP_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
     foreach(TEST_SCRIPT ${SDK_TEST_FILE_LIST}) 
         file(RELATIVE_PATH RELATIVE_TEST_PATH ${TEST_CPP_SOURCE_DIR} ${TEST_SCRIPT})
