--- a/examples/toydb/src/CMakeLists.txt
+++ b/examples/toydb/src/CMakeLists.txt
@@ -51,7 +51,7 @@ add_library(toydb_lib STATIC ${TOYDB_SRC_FILE_LIST})
 target_link_libraries(toydb_lib ${TOYDB_DEPS_LIBS})
 
 # toydb unittests
-if (TESTING_ENABLE)
+if (TESTING_ENABLE AND EXAMPLES_TESTING_ENABLE)
     get_property(TOYDB_TEST_FILE_LIST_STR GLOBAL PROPERTY TOYDB_TEST_FILE_LIST)
     string(REPLACE " " ";" TOYDB_TEST_FILE_LIST ${TOYDB_TEST_FILE_LIST_STR})
     set(TEST_CPP_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
