Update CMakeList and cicd tool scripts
- Change CMake_BUILD_TYPE for coverage and upload install
- Install and Upload hybridse in BUILD stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ build_hybridse_on_linux:
     artifacts:
         paths:
             - intermediate_cicd_artifact_linux.tar.gz
+            - hybridse-*.tar.gz
 
 coverage_report:
     stage: build
