Update hyhrid-java pom and gitlab-ci
- add github maven repository
- deploy only for release and tags

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,9 +93,9 @@ micro_benchmark:
             - ./benchmark_compare.html
             
 deploy_hybridse:
-#    only:
-#        - release/*
-#        - tags
+    only:
+        - release/*
+        - tags
     stage: deploy
     script:
         - bash tools/cicd/hybridse_deploy.sh
